@@ -1,3 +1,7 @@
+2013-08-02  Yury Usischev
+
+        * Add neon optimizations for several scaling/map routines in evas
+
 2013-08-02  Cedric Bail
 
         * Evas: change mapping policy for image loader (RANDOM during header,
